syntax = "proto3";
package calculator;
option go_package="calculatorpb";

import "google/api/annotations.proto";

message AddRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message AddResponse {
  int32 result = 1;
}

service Calculator {
  rpc Add(AddRequest) returns (AddResponse) {
    option (google.api.http) = {
      get: "/v1/add"
    };
  };
}

message PrintRequest {
  int32 num = 1;
}

message PrintResponse {}

service Printer {
  rpc Print(PrintRequest) returns (PrintResponse) {
    option (google.api.http) = {
      get: "/v1/print/{num}"
    };
  };
}

